force-app/main/default/objects/Invoice_Line_Item__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services</label>
    <referenceTo>Project_Services__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>