force-app/main/default/objects/Invoice_Line_Item__c/fields/Tax_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_1_Amount__c</fullName>
    <formula>Amount__c *  Tax_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax 1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>