force-app/main/default/objects/Invoice_Line_Item__c/fields/Tax_2__c.field-meta.xml
<CustomField>
    <fullName>Tax_2__c</fullName>
    <label>Tax 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>