force-app/main/default/objects/Invoice_Line_Item__c/fields/Tax_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type_1__c</fullName>
    <label>Tax Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAT</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>SST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>