force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Amount_should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_should_be_greater_than_zero</fullName>
    <active>true</active>
    <description>Amount should be greater than zero</description>
    <errorConditionFormula>Amount__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount should be greater than zero</errorMessage>
</ValidationRule>