force-app/main/default/objects/Invoice_Line_Item__c/validationRules/CurrencyIsoCode_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CurrencyIsoCode_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT( CurrencyIsoCode))</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>