force-app/main/default/objects/Invoice_Line_Item__c/validationRules/InvoiceLineItemCurrencysudbesameasInvoic.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceLineItemCurrencysudbesameasInvoic</fullName>
    <active>true</active>
    <description>Invoice Line Item currency should be the same as the Invoice.</description>
    <errorConditionFormula>Text(CurrencyIsoCode) != Text(Invoice__r.CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>Please ensure if Invoice Line Item Currency is the same as the Invoice Currency</errorMessage>
</ValidationRule>