force-app/main/default/objects/Invoice_Line_Item__c/validationRules/Tax_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_validation</fullName>
    <active>true</active>
    <description>If Tax Type (1/2/3) is selected then Tax (1/2/3) Value should be mandatory</description>
    <errorConditionFormula>OR(
AND( !ISBLANK(Text(Tax_Type_1__c )),
 ISBLANK(Tax_1__c) 
),
AND( !ISBLANK(Text(Tax_Type_2__c )),
  ISBLANK(Tax_2__c)
),
AND( !ISBLANK(Text(Tax_Type_3__c )),
  ISBLANK(Tax_3__c) 
)
)</errorConditionFormula>
    <errorMessage>Please enter Tax value (Tax is mandatory if Tax Type is selected).</errorMessage>
</ValidationRule>